Reemplazo de la logica de ExecutionStatus por ExecutionContext, es fragil y complica el uso de multiples ejecuciones para usuarios